; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/kernel/extr_fadump.c_fadump_cpu_notes_buf_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/kernel/extr_fadump.c_fadump_cpu_notes_buf_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i64)* @fadump_cpu_notes_buf_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fadump_cpu_notes_buf_free(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.page*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %9 = load i64, i64* %4, align 8
  %10 = call i64 @get_order(i64 %9)
  store i64 %10, i64* %6, align 8
  %11 = load i64, i64* %6, align 8
  %12 = trunc i64 %11 to i32
  %13 = shl i32 1, %12
  %14 = sext i32 %13 to i64
  store i64 %14, i64* %7, align 8
  %15 = load i64, i64* %3, align 8
  %16 = call %struct.page* @virt_to_page(i64 %15)
  store %struct.page* %16, %struct.page** %5, align 8
  store i64 0, i64* %8, align 8
  br label %17

17:                                               ; preds = %26, %2
  %18 = load i64, i64* %8, align 8
  %19 = load i64, i64* %7, align 8
  %20 = icmp ult i64 %18, %19
  br i1 %20, label %21, label %29

21:                                               ; preds = %17
  %22 = load %struct.page*, %struct.page** %5, align 8
  %23 = load i64, i64* %8, align 8
  %24 = getelementptr inbounds %struct.page, %struct.page* %22, i64 %23
  %25 = call i32 @ClearPageReserved(%struct.page* %24)
  br label %26

26:                                               ; preds = %21
  %27 = load i64, i64* %8, align 8
  %28 = add i64 %27, 1
  store i64 %28, i64* %8, align 8
  br label %17

29:                                               ; preds = %17
  %30 = load %struct.page*, %struct.page** %5, align 8
  %31 = load i64, i64* %6, align 8
  %32 = call i32 @__free_pages(%struct.page* %30, i64 %31)
  ret void
}

declare dso_local i64 @get_order(i64) #1

declare dso_local %struct.page* @virt_to_page(i64) #1

declare dso_local i32 @ClearPageReserved(%struct.page*) #1

declare dso_local i32 @__free_pages(%struct.page*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
